--- a/webapp/style.css
+++ b/webapp/style.css
@@ -51,7 +51,7 @@ input[type="file"]:focus {
 }
 
 .manual-link-box {
-    margin: 6px 0 0 0;
+    margin: 0 0 6px 0;
     width: 100%;
     display: flex;
     align-items: flex-start;
